# donna-app

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/adr/: ADR-001-tauri-framework.md  ADR-002-copilot-cli-brain.md  ADR-003-always-alive-architecture.md  ADR-004-build-not-adopt-openclaw.md  ADR-005-mcp-first-integration.md
docs/design/: DESIGN-BRIEF.md
docs/design/mocks/: donna-app-mockup.html
docs/plans/: 2026-04-23-donna-telegram-bot.md
docs/specs/: CAPABILITIES.md  FEATURES.md
hivemind/: FEATURE_DEV_SOP.md
poc/: graph_probe.py  graph_probe_results.json  graph_search.py  graph_search_results.json
src/donna_bot/: __init__.py  __main__.py  bot.py  config.py
src/donna_bot/auth/: __init__.py  token_manager.py  wam.py
src/donna_bot/formatters/: __init__.py  cards.py  escape.py  keyboards.py  progress.py
src/donna_bot/graph/: __init__.py  calendar.py  client.py  mail.py  me.py  people.py  search.py
src/donna_bot/handlers/: __init__.py  briefing.py  calendar.py  email.py  fallback.py  people.py  pr.py  search.py  start.py
src/donna_bot/memory/: __init__.py
src/donna_bot/middleware/: __init__.py  logging_mw.py  security.py
tests/: conftest.py  test_config.py
tests/test_auth/: test_token_manager.py
tests/test_formatters/: test_cards.py  test_escape.py
tests/test_graph/: test_calendar.py  test_client.py  test_mail.py  test_me.py  test_search.py
tests/test_handlers/: test_briefing.py  test_calendar.py  test_email.py  test_fallback.py  test_people.py  test_pr.py  test_search.py
(+4 files in other folders)
